Added more symbiosis-related tests after fixing some minor bugs in the Symbiosis implementation.
git-svn-id: https://ambienttalk.googlecode.com/svn/interpreter/trunk@204 c0a7138a-1c4d-0410-81cb-3328cd1d7e1d